--- a/TradeAnalysis.ipynb
+++ b/TradeAnalysis.ipynb
@@ -14,7 +14,7 @@
     "This project implements 2 of the 6 stock trading algorithm dicussed in the [Become a Day Trader Course by Investopedia](https://academy.investopedia.com/products/become-a-day-trader)\n",
     "\n",
     "The project consists of two parts: \n",
-    "- First a python file that simulates trading Apple's stock during March 10, 2020 to April 3, 2020 using minute by minute stock price\n",
+    "- First a python file that simulates trading Apple's stock during March 10, 2020 to April 3, 2020 using the trading algorithms from Investopedia's course\n",
     "- Second is this Jupyter Notebook that describes the methodology behind the trading bot, result of trading from previous step and future improvement"
    ]
   },
