--- a/TradeAnalysis.ipynb
+++ b/TradeAnalysis.ipynb
@@ -326,13 +326,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This DataFrame is similar to DataFrame that is retrieved directly from Yahoo Finance. The DataFrame also contains the derived numbers: SMA, EMA, RSI, all of which have been described before. This modified DataFrame is used by the bot to store and retrieve the derived numbers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 6.1 Analysis of Profit and Loss Summary by Days"
    ]
   },
@@ -505,7 +498,7 @@
    "source": [
     "This DataFrame shows the ending balance at the end of each day. The starting balance was USD 10,000 as stated before.\n",
     "\n",
-    "At the end of 19 business days, the trading bot lost about \\\\$76.74. The result is a bit disappointing to see, especially considering that just two days before the end of the test run, it made a total profit of about \\\\$56.76. \n",
+    "At the end of 19 business days, the trading bot lost about \\$76.74. The result is a bit disappointing to see, especially considering that just two days before the end of the test run, it made a total profit of about \\$56.76. \n",
     "\n",
     "Let's dive deeper into the losing and winning days. Some minor cleanup on the data is done in the process"
    ]
